--- a/roles/buildbot_worker/templates/buildbot-worker.init.j2
+++ b/roles/buildbot_worker/templates/buildbot-worker.init.j2
@@ -20,15 +20,15 @@
 
 case "$1" in
 start)
-    sudo -u {{ buildbot_user.name }} {{ buildbot_worker_basedir }}/buildbot-worker-start.sh
+    sudo -u {{ buildbot_worker_user }} {{ buildbot_worker_basedir }}/buildbot-worker-start.sh
     RETVAL=$?
     ;;
 stop)
-    sudo -u {{ buildbot_user.name }} {{ buildbot_worker_basedir }}/buildbot-worker-stop.sh
+    sudo -u {{ buildbot_worker_user }} {{ buildbot_worker_basedir }}/buildbot-worker-stop.sh
     RETVAL=$?
     ;;
 status)
-    sudo -u {{ buildbot_user.name }} {{ buildbot_worker_basedir }}/buildbot-worker-status.sh
+    sudo -u {{ buildbot_worker_user }} {{ buildbot_worker_basedir }}/buildbot-worker-status.sh
     RETVAL=$?
     ;;
 *)
